<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">Touch Radio</string>
    
    <!-- Main Categories -->
    <string name="category_local">Místní stanice</string>
    <string name="category_favorites">Oblíbené</string>
    <string name="category_pop">Pop</string>
    <string name="category_rock">Rock</string>
    <string name="category_jazz">Jazz</string>
    <string name="category_dance">Dance</string>
    <string name="category_electronic">Elektronická</string>
    <string name="category_classical">Klasická</string>
    <string name="category_country">Country</string>
    <string name="category_folk">Folk</string>
    <string name="category_spoken_word">Mluvené slovo</string>
    <string name="category_children">Dětské</string>
    <string name="category_religious">Náboženské</string>
    <string name="category_news">Zpravodajství</string>
    <string name="category_other">Ostatní</string>
    <string name="category_local_cz">České stanice</string>
    <string name="category_local_sk">Slovenské stanice</string>
    <string name="category_local_de">Německé stanice</string>
    <string name="category_local_at">Rakouské stanice</string>
    <string name="category_local_pl">Polské stanice</string>
    <string name="category_local_gb">Britské stanice</string>
    <string name="category_local_us">Americké stanice</string>
    <string name="category_all">Všechny stanice</string>

    <!-- Navigation -->
    <string name="nav_search">Hledat</string>
    <string name="nav_settings">Nastavení</string>
    <string name="nav_favorite_songs">Oblíbené skladby</string>
    <string name="nav_equalizer">Ekvalizér</string>
    <string name="nav_back">Zpět</string>
    <string name="nav_popular_stations">Populární stanice</string>
    <string name="nav_search_stations">Hledat stanice</string>
    <string name="nav_settings_desc">Nastavení</string>
    <string name="nav_all">Vše</string>
    <string name="nav_my_stations">Moje stanice</string>

    <!-- Player -->
    <string name="player_play">Přehrát</string>
    <string name="player_pause">Pozastavit</string>
    <string name="player_stop">Zastavit</string>
    <string name="player_next">Další stanice</string>
    <string name="player_previous">Předchozí stanice</string>
    <string name="player_volume">Hlasitost</string>
    <string name="player_bitrate_format">%d kbps</string>
    <string name="player_time_remaining">Zbývá: %1$d:%2$02d</string>
    <string name="player_app_name">Internetové rádio</string>

    <!-- Settings -->
    <string name="settings_title">Nastavení</string>
    <string name="settings_language">Jazyk</string>
    <string name="settings_language_system">Systémový jazyk</string>
    <string name="settings_language_en">Angličtina</string>
    <string name="settings_language_cs">Čeština</string>
    <string name="settings_language_sk">Slovenština</string>
    <string name="settings_language_pl">Polština</string>
    <string name="settings_language_de">Němčina</string>
    <string name="settings_language_fr">Francouzština</string>
    <string name="settings_language_es">Španělština</string>
    <string name="settings_max_favorites">Maximální počet oblíbených</string>
    <string name="settings_fade_duration">Doba zeslabení</string>
    <string name="settings_equalizer_enabled">Povolit ekvalizér</string>
    <string name="settings_export">Exportovat nastavení</string>
    <string name="settings_import">Importovat nastavení</string>
    <string name="settings_sleep_timer">Časovač vypnutí</string>
    <string name="settings_add_station">Přidat stanici</string>

    <!-- Search -->
    <string name="search_hint">Hledat stanice online...</string>
    <string name="search_hint_saved">Hledat v uložených...</string>
    <string name="search_no_results">Nenalezeny žádné stanice</string>
    <string name="search_error">Chyba při vyhledávání stanic</string>
    <string name="search_min_chars">Zadejte alespoň 3 znaky</string>

    <!-- Filter -->
    <string name="filter_sort_by">Řadit podle:</string>
    <string name="filter_sort_by_popularity">Popularity</string>
    <string name="filter_sort_by_name">Jména</string>
    <string name="filter_sort_by_quality">Kvality</string>
    <string name="filter_country">Země:</string>
    <string name="filter_country_czech">Česká republika</string>
    <string name="filter_country_slovak">Slovensko</string>
    <string name="filter_quality">Minimální kvalita:</string>
    <string name="filter_quality_64">64 kbps</string>
    <string name="filter_quality_128">128 kbps</string>
    <string name="filter_quality_256">256 kbps</string>

    <!-- Actions -->
    <string name="action_add_favorite">Přidat do oblíbených</string>
    <string name="action_remove_favorite">Odebrat z oblíbených</string>
    <string name="action_save_song">Uložit skladbu</string>
    <string name="action_share">Sdílet</string>
    <string name="action_delete">Smazat</string>
    <string name="action_edit">Upravit</string>
    <string name="action_cancel">Zrušit</string>
    <string name="action_save">Uložit</string>
    <string name="action_close">Zavřít</string>
    <string name="action_more_options">Více možností</string>
    <string name="action_copy_to_clipboard">Kopírovat do schránky</string>
    <string name="action_save_to_category">Uložit do kategorie</string>
    <string name="action_clear">Vymazat</string>

    <string name="action_clear_data">Vymazat data aplikace</string>

    <!-- Widget -->
    <string name="widget_description">Widget přehrávače pro rychlý přístup k oblíbeným stanicím</string>
    <string name="widget_radio_name">Stanice</string>
    <string name="widget_metadata">Právě hraje</string>

    <!-- Messages -->
    <string name="msg_favorites_limit">Dosažen maximální počet oblíbených</string>
    <string name="msg_favorites_limit_description">Můžete mít maximálně %d oblíbených stanic. Prosím, odeberte některou stanici z oblíbených před přidáním nové, nebo zvyšte limit v nastavení aplikace.</string>
    <string name="msg_song_saved">Skladba byla uložena do oblíbených</string>
    <string name="msg_station_added">Stanice byla přidána do oblíbených</string>
    <string name="msg_station_removed">Stanice byla odebrána z oblíbených</string>
    <string name="msg_settings_exported">Nastavení byla exportována</string>
    <string name="msg_settings_imported">Nastavení byla importována</string>
    <string name="msg_song_saved_to_favorites">Skladba byla přidána do oblíbených</string>

    <!-- Errors -->
    <string name="error_no_internet">Není k dispozici připojení k internetu</string>
    <string name="error_playback_failed">Stanici se nepodařilo přehrát. Zkuste to prosím později.</string>

    <!-- Equalizer -->
    <string name="equalizer_title">Ekvalizér</string>
    <string name="equalizer_enable">Zapnout ekvalizér</string>
    <string name="equalizer_presets">Předvolby</string>
    <string name="equalizer_bands">Nastavení pásem</string>
    <string name="equalizer_db_format">%d dB</string>
    <string name="equalizer_band_60hz">60Hz</string>
    <string name="equalizer_band_230hz">230Hz</string>
    <string name="equalizer_band_910hz">910Hz</string>
    <string name="equalizer_band_3_6khz">3.6kHz</string>
    <string name="equalizer_band_14khz">14kHz</string>

    <!-- Lists -->
    <string name="list_all">Vše</string>
    <string name="list_no_favorite_songs">Zatím nemáte žádné oblíbené skladby</string>
    <string name="list_no_favorite_stations">Zatím nemáte žádné oblíbené stanice</string>
    <string name="empty_state_offline_title">Nejste připojeni k internetu</string>
    <string name="empty_state_offline_desc">Bez připojení nelze načíst ani vyhledávat stanice.</string>
    <string name="search_error_offline">Bez připojení k internetu nelze vyhledávat stanice</string>

    <!-- Settings Notes -->
    <string name="settings_favorites_note">Poznámka: Tento limit platí pouze pro kategorii Oblíbené. Ostatní kategorie jsou bez omezení.</string>
    <string name="settings_fade_note">Nastavte čas, během kterého se bude hlasitost postupně snižovat před vypnutím časovačem spánku.</string>
    <string name="settings_current_limit">Aktuální limit: %d stanic</string>
    <string name="settings_seconds_format">%d sekund</string>

    <!-- Radio Player -->
    <string name="radio_logo_description">Logo stanice %s</string>
    <string name="radio_default_description">Internetové rádio</string>
    <string name="sleep_timer_off">Vypnout časovač</string>
    <string name="sleep_timer_minutes">%d minut</string>
    <string name="sleep_timer_remaining">Zbývá: %1$d:%2$s</string>

    <!-- Add Radio Screen -->
    <string name="add_station_name">Název stanice</string>
    <string name="add_station_stream_url">URL streamu</string>
    <string name="add_station_image_url">URL obrázku (volitelné)</string>
    <string name="add_station_description">Popis (volitelné)</string>
    <string name="add_station_category">Kategorie</string>
    <string name="add_station_expand">Rozbalit</string>
    <string name="add_station_save_changes">Uložit změny</string>
    <string name="add_station_add">Přidat stanici</string>
    <string name="add_station_error_duplicate_url">Stanice s touto URL již existuje</string>
    <string name="add_station_error_duplicate_name">Stanice s tímto názvem již existuje</string>

    <!-- Onboarding & Permissions -->
    <string name="welcome_title">Vítejte v Touch Radio</string>
    <string name="welcome_message">Abychom vám mohli nabídnout ten nejlepší zážitek, potřebujeme následující oprávnění:\n\n• <b>Oznámení</b>: Pro ovládání přehrávače ze zamknuté obrazovky a oznamovací lišty.\n• <b>Poloha</b>: Pro automatické nabízení místních rozhlasových stanic ve vašem okolí.</string>
    <string name="action_continue">Pokračovat</string>
    <string name="permission_notifications_rationale">Oprávnění k oznámení je vyžadováno pro ovládání rádia, když je aplikace na pozadí. Prosím, povolte jej v dalším kroku.</string>

<string name="msg_station_saved_to_category">Stanice uložena do kategorie %s</string>
    <string name="widget_compact_name">Přehrávač (Mini)</string>
    <string name="widget_medium_name">Přehrávač (Střední)</string>
    <string name="widget_control_name">Přehrávač (Jemný)</string>
    <string name="widget_large_name">Přehrávač (Velký)</string>

    <!-- New Settings -->
    <string name="settings_unified_color_title">Jednotná barva kategorií</string>
    <string name="settings_unified_color_desc">Klidný režim barev pro všechny kategorie</string>
    <string name="settings_clear_data_desc">Vymaže všechna data a nastavení</string>
    <string name="dialog_clear_data_message">Opravdu chcete vymazat všechna data aplikace? Tato akce je nevratná.</string>
    <string name="dialog_fade_out_title">Doba zeslabení zvuku</string>
    <string name="dialog_fade_out_desc">Nastavte dobu zeslabení před vypnutím.</string>

    <!-- Location Feature -->
    <string name="msg_location_improves_accuracy">Zpřesnit výběr stanic podle polohy</string>
    <string name="action_enable_location">Povolit polohu</string>
</resources>
