<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:background="@drawable/widget_background"
    android:padding="8dp">

    <!-- Hidden Views -->
    <ImageButton android:id="@+id/widget_previous" android:layout_width="0dp" android:layout_height="0dp" android:visibility="gone"/>
    <ImageButton android:id="@+id/widget_next" android:layout_width="0dp" android:layout_height="0dp" android:visibility="gone"/>

    <ImageView
        android:id="@+id/widget_radio_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/widget_radio_name"
        android:background="#20FFFFFF"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginEnd="4dp">

        <TextView
            android:id="@+id/widget_radio_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textStyle="bold"
            android:text="@string/widget_radio_name" />

        <TextView
            android:id="@+id/widget_metadata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#AAAAAA"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="12sp"
            android:text="@string/widget_metadata" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/widget_play_pause"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/player_play"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_play_arrow"
        android:tint="#FFFFFF"/>

</LinearLayout>
